Closed Bug 1757999 Opened 4 years ago Closed 4 years ago

HTTP wasm caching prevents debugging

Categories

(Core :: JavaScript Engine: JIT, defect, P2)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: yury, Assigned: yury)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Currently HTTP caching for WebAssembly does not allow baseline to select "debug" mode.

STR:

  1. Open web page, e.g. https://yurydelendik.github.io/sqlite-playground/src/playground.html
  2. Wait 5-10 seconds (allows cache entry to be created)
  3. Open devtools on Debugger tab
  4. Reload the page normal way, e.g. "Reload current page" or Cmd+R

Notice that wasm sources are not available.

Workaround:

  • Select "disable caching" on Network tab
  • Or, use Shift+Cmd+R to reload page
  • Or, switch javascript.options.wasm_caching config entry to false
Assignee: nobody → ydelendik
Priority: -- → P2
See Also: → 1487113
Severity: -- → S3
Attachment #9266583 - Attachment description: WIP: Bug 1757999 - Disable fetch HTTP wasm caching if wasm debug enabled. → Bug 1757999 - Disable fetch HTTP wasm caching if wasm debug enabled.

We want to have tests for this, leaving openned

Keywords: leave-open
Pushed by ydelendik@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f137f28d9cb6 Disable fetch HTTP wasm caching if wasm debug enabled. r=necko-reviewers,lth,kershaw
Blocks: wasm-caching
Status: NEW → ASSIGNED

Some tests are landed at bug 1719615. More tests will be added with bug 1761327. Closing this bug.

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: