Bug 1757999 - Disable fetch HTTP wasm caching if wasm debug enabled. r=necko-reviewers,lth,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D140401